- Add SimpleTreeNode - Add build methods to Setx, DoubleList and LongList - Add zip Gatherer methods - Update to 1.0.5.22